# tinyBegin_iEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/Include/: tinyBegin_iEngine.hpp
Engine/Include/Core/: Application.hpp  EntryPoint.hpp
Engine/Include/Core/Window/: Window.hpp
Engine/Source/Core/: Application.cpp
Engine/Source/Core/Window/: Window.cpp
Game/: CMakeLists.txt
Game/Source/: Game.cpp
